<resources>

    <!--App Name-->
    <string name="app_name">NRUM</string>


    <!--Action Menu-->
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_contact">Contact</string>

    <!--Activity Titles-->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="title_activity_nrum_web_view">Website</string>
    <string name="title_activity_news_list">News</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_news_detail">Detail News</string>
    <string name="title_activity_about">About Us</string>
    <string name="title_activity_post_list">Programs</string>
    <string name="title_activity_post_detail">Program</string>

    <!--Home Page button text-->
    <string name="ic_archive_24dp">News</string>
    <string name="ic_folder_24dp">FAQ</string>
    <string name="ic_downloads_24dp">Docs</string>

    <!--Drawable Texts-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome">Welcome To :</string>
    <string name="nepal_rajdhami_utthan_mancha">Nepal Rajdhami Utthan Mancha</string>
    <string name="dmenu_home">Home</string>
    <string name="dmenu_news">News</string>
    <string name="dmenu_post">Programs</string>
    <string name="dmenu_gallery">Gallery</string>
    <string name="dmenu_docs">Docs</string>
    <string name="dmenu_calendar">Calendar</string>
    <string name="dmenu_wordbank">Word Bank</string>
    <string name="dmenu_signin">SignIn</string>


    <string name="btn_about">About Us</string>
    <string name="loading">loading</string>
    <string name="signed_in_fmt">SignedInFragment</string>
    <string name="under_construction">Under Construction!!</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_lang">Language</string>
    <string-array name="pref_lang_list_titles">
        <item>English</item>
        <item>नेपाली</item>
        <item>राजधामी</item>
    </string-array>
    <string-array name="pref_lang_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_push_notification">Enable Push Notification</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="dmenu_website">Website</string>
    <string name="want_to_exit">Do you really want to Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_latest_notice">We don\'t have latest Notice.</string>
    <string name="server_not_responding">Server is not responding.Please contact Administrator</string>
    <string name="ago">ago</string>
    <string name="action_share_app">Share NRUM App</string>
    <string name="action_rate_app">Rate Our App</string>
    <string name="action_likeus_on_facebook">Like Us On Facebook</string>
    <string name="dmenu_settings">Settings</string>
    <string name="tab_latest_news">Latest News</string>
    <string name="tab_latest_programs">Latest Programs</string>
    <string name="send_email_via">Send Email Via..</string>
    <string name="btn_news">News</string>
    <string name="dmenu_faq">FAQ</string>
    <string name="title_activity_faq_list">FAQ</string>
    <string name="title_activity_faq_detail">FAQ Detail</string>
    <string name="ic_members_24dp">Board</string>
    <string name="title_activity_member_list">Board Members</string>
    <string name="dmenu_member">Board Members</string>

    <!--Ad-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
