<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_menu_share"
        android:title="Share"
        app:showAsAction="always"
        android:actionProviderClass="android.widget.ShareActionProvider"/>
    <item
        android:id="@+id/action_share_app"
        android:orderInCategory="100"
        android:title="@string/action_share_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="100"
        android:title="@string/action_rate_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_likeus_on_facebook"
        android:orderInCategory="100"
        android:title="@string/action_likeus_on_facebook"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />
</menu>
