<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.nrum.nrum.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <!--daimajia image slider-->
    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />
    <com.daimajia.slider.library.Indicators.PagerIndicator
        android:id="@+id/custom_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        />

    <LinearLayout android:id="@+id/buttonGroup"
        android:layout_below="@+id/slider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button android:id="@+id/Button1"
            android:layout_below="@+id/ButtonAlert"
            android:text="@string/ic_archive_24dp"
            android:drawableLeft="@drawable/ic_news_24dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentBottom="true">
        </Button>
        <Button android:id="@+id/Button2"
            android:layout_alignRight="@id/Button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ic_folder_24dp"
            android:drawableLeft="@drawable/ic_events_24dp"
            android:layout_alignParentBottom="true">
        </Button>
        <Button android:id="@+id/Button3"
            android:layout_alignRight="@id/Button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ic_downloads_24dp"
            android:drawableLeft="@drawable/ic_docs_24dp"
            android:layout_alignParentBottom="true">
        </Button>
    </LinearLayout>
</RelativeLayout>
